[gd_scene load_steps=25 format=3 uid="uid://3iv2uw0ktxe5"]

[ext_resource type="Script" path="res://maps/hideout_hub/hideout_hub.gd" id="1_svhmt"]
[ext_resource type="Texture2D" uid="uid://clrql7na4xfba" path="res://tilesets/hideout_tileset/hideout_tileset.png" id="2_gis22"]
[ext_resource type="Script" path="res://ui/dialog/dialog_resource.gd" id="2_ill4q"]
[ext_resource type="PackedScene" uid="uid://ddqssg6qko7t7" path="res://player/player.tscn" id="2_ru3yv"]
[ext_resource type="PackedScene" uid="uid://lsg7qb8blto4" path="res://maps/hideout_hub/dungeon_selector_manager.tscn" id="4_rnqfy"]
[ext_resource type="PackedScene" uid="uid://cyrdo4s5yatf8" path="res://npcs/dialog_npc/dialog_npc.tscn" id="5_vi8no"]
[ext_resource type="PackedScene" uid="uid://b6wxxyq8m8fdq" path="res://npcs/forest_spirits/cat_forest_spirit/cat_forest_spirit_sprite.tscn" id="6_0ahk7"]
[ext_resource type="PackedScene" uid="uid://dd88n5g1t67a6" path="res://util/position_marker/position_marker.tscn" id="7_1efiv"]
[ext_resource type="PackedScene" uid="uid://hu85mdx20iyb" path="res://npcs/forest_spirits/frog_forest_spirit/frog_forest_spirit_sprite.tscn" id="7_vvvq4"]
[ext_resource type="PackedScene" uid="uid://ornrrfcqe7p2" path="res://npcs/forest_spirits/dog_forest_spirit/dog_forest_spirit_sprite.tscn" id="8_h0mhr"]
[ext_resource type="PackedScene" uid="uid://d0h7bgo6fyejg" path="res://npcs/forest_spirits/penguin_forest_spirit/penguin_forest_spirit_sprite.tscn" id="9_x04u3"]
[ext_resource type="PackedScene" uid="uid://cst0mrjfn4dew" path="res://npcs/emmy/emmy_npc_sprite.tscn" id="11_vo8kq"]

[sub_resource type="Resource" id="Resource_bdqr0"]
script = ExtResource("2_ill4q")
author = "Emmy"
dialog = Array[String](["(placeholder dialog for the first cutscene)", "Please rescue the forest spirits.", "The location of the spirits came to me in a dream.", "Please right click on the map on the table.", "Then, please left click on the blue icon to rescue the first spirit."])

[sub_resource type="Resource" id="Resource_lg452"]
script = ExtResource("2_ill4q")
author = "Emmy"
dialog = Array[String](["(placeholder dialog after beating Cobalt)"])

[sub_resource type="Resource" id="Resource_i6sqi"]
script = ExtResource("2_ill4q")
author = "Emmy"
dialog = Array[String](["(placeholder after beating Ulmus)"])

[sub_resource type="Resource" id="Resource_sbmr8"]
script = ExtResource("2_ill4q")
author = "Emmy"
dialog = Array[String](["(placeholder after beating Vodorod)"])

[sub_resource type="Resource" id="Resource_ylq2g"]
script = ExtResource("2_ill4q")
author = "Emmy"
dialog = Array[String](["(placeholder after beating Dunkel)", "Now you're ready to rematch the Queen.", "Please left click on the gray icon."])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_178f1"]
texture = ExtResource("2_gis22")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.14905, 8, 1.14905, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.56326, 2.56326, 8, 2.20971, 8, 8, 2.38649, 8)
6:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_1/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.972272, 8, 0.972272, 8, 8, -8, 8)
7:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_1/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.972272, -2.91682, 1.32583, -2.74004, 8, -8, 8)
8:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_1/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_1/angular_velocity = 0.0
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.5026, 8, 1.5026, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_1/angular_velocity = 0.0
1:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.5026, 8, 1.5026, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_1/angular_velocity = 0.0
2:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.5026, 8, 1.5026, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.20971, -8, 8, -8, 8, 8, 2.38649, 8)
6:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_1/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_1/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.38649, -8, -2.74004, 8, -8, 8)
8:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_1/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_1/angular_velocity = 0.0
0:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_1/angular_velocity = 0.0
2:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_1/angular_velocity = 0.0
3:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.5026, 8, 1.5026, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_1/angular_velocity = 0.0
4:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.5026, 8, 1.5026, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.74004, -8, 8, -8, 8, 2.20971, 2.74004, 1.85616)
6:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_1/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 2.91681, -8, 2.91681)
7:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_1/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.38649, -8, -2.38649, 2.03293, -8, 2.56326)
8:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_1/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_1/angular_velocity = 0.0
0:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_1/angular_velocity = 0.0
1:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.5026, 8, 1.5026, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_1/angular_velocity = 0.0
2:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_1/angular_velocity = 0.0
3:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 1.5026, 2.74004, 1.5026, 2.74004, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_1/angular_velocity = 0.0
4:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, -2.56326, -8, -2.38649, 1.14905, 8, 1.14905, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_1/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_1/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_1/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_1/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_1eajn"]
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 5
physics_layer_1/collision_mask = 5
sources/0 = SubResource("TileSetAtlasSource_178f1")

[sub_resource type="Resource" id="Resource_7sp3s"]
script = ExtResource("2_ill4q")
author = "Cat Spirit"
dialog = Array[String](["Meow.", "Hello."])

[sub_resource type="Resource" id="Resource_lth6j"]
script = ExtResource("2_ill4q")
author = "Frog Spirit"
dialog = Array[String](["Ribbit.", "Please defeat the Queen. That would be cool. Thanks."])

[sub_resource type="Resource" id="Resource_nckq3"]
script = ExtResource("2_ill4q")
author = "Dog Spirit"
dialog = Array[String](["Woof.", "You look too weak to defeat the Queen, in my opinion."])

[sub_resource type="Resource" id="Resource_j6gxk"]
script = ExtResource("2_ill4q")
author = "Penguin Spirit"
dialog = Array[String](["(Penguin sound)", "The world rests on your shoulders...", "...you do have shoulders right?"])

[sub_resource type="Resource" id="Resource_wflvf"]
script = ExtResource("2_ill4q")
author = "Emmy"
dialog = Array[String](["Hello."])

[node name="HideoutHub" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_svhmt")
_first_cutscene_dialog = SubResource("Resource_bdqr0")
_return_from_cobalt_dialog = SubResource("Resource_lg452")
_return_from_ulmus_dialog = SubResource("Resource_i6sqi")
_return_from_vodorod_dialog = SubResource("Resource_sbmr8")
_return_from_dunkel_dialog = SubResource("Resource_ylq2g")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1eajn")
format = 2
layer_0/name = "Floor"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-1, 65536, 0, -65536, 65536, 0, 0, 65536, 0, 65535, 65536, 0, 131071, 65536, 0, 65536, 65536, 0, -2, 65536, 0, 65534, 65536, 0, 131070, 65536, 0, -65535, 65536, 0, 1, 65536, 0, 65537, 65536, 0, -3, 65536, 0, 65533, 65536, 0, 131069, 65536, 0, 196605, 65536, 0, 196606, 65536, 0, 196607, 65536, 0, 131072, 65536, 0, 131073, 65536, 0, 131074, 65536, 0, 65538, 65536, 0, 2, 65536, 0, -65534, 65536, 0, -65539, 65536, 0, -65538, 65536, 0, -65537, 65536, 0, -131072, 65536, 0, -131071, 65536, 0, -131070, 65536, 0, -131069, 65536, 0, -65533, 65536, 0, 3, 65536, 0, 65539, 65536, 0, 131075, 65536, 0, -131068, 65536, 0, -65532, 65536, 0, 4, 65536, 0, 65540, 65536, 0, 131076, 65536, 0, 262141, 65536, 0, 262142, 65536, 0, 262143, 65536, 0, 196608, 65536, 0, 196609, 65536, 0, 196610, 65536, 0, 196611, 65536, 0, 196612, 65536, 0, -65540, 65536, 0, -4, 65536, 0, -5, 65536, 0, 65531, 65536, 0, 131067, 65536, 0, 196603, 65536, 0, 262139, 65536, 0, 262140, 65536, 0, 196604, 65536, 0, 131068, 65536, 0, 65532, 65536, 0, -65541, 65536, 0, -65542, 65536, 0, -6, 65536, 0, 65530, 65536, 0, 131066, 65536, 0, 131065, 65536, 0, 196601, 65536, 0, 262137, 65536, 0, 262138, 65536, 0, 196602, 65536, 0, 65529, 65536, 0, -7, 65536, 0, -65543, 65536, 0, -65544, 65536, 0, -8, 65536, 0, 65528, 65536, 0, 131064, 65536, 0, 196600, 65536, 0, 262136, 65536, 0, -65545, 65536, 0, -9, 65536, 0, 65527, 65536, 0, 131063, 65536, 0, 196599, 65536, 0, 262135, 65536, 0, -131080, 65536, 0, -131079, 65536, 0, -131078, 65536, 0, -131077, 65536, 0, -196613, 65536, 0, -262149, 65536, 0, -327685, 65536, 0, -327686, 65536, 0, -327687, 65536, 0, -327688, 65536, 0, -262152, 65536, 0, -262151, 65536, 0, -262150, 65536, 0, -196615, 65536, 0, -196616, 65536, 0, -196614, 65536, 0, -393224, 65536, 0, -393223, 65536, 0, -393222, 65536, 0, -393221, 65536, 0, -458757, 65536, 0, -458758, 65536, 0, -458759, 65536, 0, -458760, 65536, 0, -65546, 65536, 0, -10, 65536, 0, 65526, 65536, 0, 131062, 65536, 0, 196598, 65536, 0, 262134, 65536, 0, 262133, 65536, 0, 196597, 65536, 0, 131061, 65536, 0, 65525, 65536, 0, -11, 65536, 0, -65547, 65536, 0, -65548, 65536, 0, -12, 65536, 0, 65524, 65536, 0, 131060, 65536, 0, 196596, 65536, 0, 262132, 65536, 0)
layer_1/name = "Furniture"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(1, 458752, 3, 65537, 458752, 1, -65535, 458752, 1, 131073, 458752, 2, -131071, 458752, 0, -65536, 393216, 1, 0, 393216, 1, 65536, 393216, 1, -65534, 524288, 1, 2, 524288, 1, 65538, 524288, 1, 131072, 393216, 2, 131074, 524288, 2, -131072, 393216, 0, -131070, 524288, 0)
layer_2/name = "BackWall"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(-196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -196604, 0, 0, -196605, 0, 0, -196606, 0, 0, -196607, 0, 0, -196608, 0, 0, -131073, 0, 0, -131074, 0, 0, -131075, 0, 0, -131076, 0, 0, -196617, 0, 0, -196618, 0, 0, -196619, 0, 0, -196620, 0, 0, -131084, 0, 0, -131083, 0, 0, -131082, 0, 0, -131081, 0, 0, -262156, 131072, 0, -262155, 131072, 0, -262154, 131072, 0, -262153, 196608, 3, -262148, 262144, 3, -262147, 131072, 0, -262146, 131072, 0, -262145, 131072, 0, -327680, 131072, 0, -327679, 131072, 0, -327678, 131072, 0, -327677, 131072, 0, -327676, 131072, 0, -262157, 0, 1, -196621, 0, 2, -131085, 0, 2, -65549, 0, 2, -13, 0, 2, 65523, 0, 2, 131059, 0, 2, 196595, 0, 2, -327675, 131072, 1, -262139, 131072, 2, -196603, 131072, 2, -131067, 131072, 2, -65531, 131072, 2, 5, 131072, 2, 65541, 131072, 2, 131077, 131072, 2, -589832, 0, 0, -589831, 0, 0, -589830, 0, 0, -589829, 0, 0, -524293, 0, 0, -524294, 0, 0, -524295, 0, 0, -524296, 0, 0, -655368, 65536, 1, -655367, 65536, 1, -655366, 65536, 1, -655365, 65536, 1, -655369, 0, 1, -655364, 131072, 1, -589833, 0, 2, -524297, 0, 2, -458761, 0, 2, -393225, 0, 2, -327689, 0, 2, -327684, 131072, 2, -393220, 131072, 2, -458756, 131072, 2, -524292, 131072, 2, -589828, 131072, 2)
layer_3/name = "FrontWall"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = -1
layer_3/tile_data = PackedInt32Array(327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 327684, 0, 0, 327683, 0, 0, 327682, 0, 0, 327681, 0, 0, 327680, 0, 0, 393215, 0, 0, 393214, 0, 0, 327677, 0, 0, 327676, 0, 0, 327675, 0, 0, 327674, 0, 0, 393208, 0, 0, 393207, 0, 0, 393206, 0, 0, 393205, 0, 0, 393204, 0, 0, 262132, 131072, 0, 262133, 131072, 0, 262134, 131072, 0, 262135, 131072, 0, 262136, 131072, 0, 262137, 131072, 0, 262138, 131072, 0, 262139, 131072, 0, 262140, 131072, 0, 262141, 131072, 0, 262142, 131072, 0, 262143, 131072, 0, 196608, 131072, 0, 196609, 131072, 0, 196610, 131072, 0, 196611, 131072, 0, 196612, 131072, 0, 262131, 0, 3, 196613, 131072, 3, 327667, 0, 5, 393203, 0, 5, 262149, 131072, 5, 327685, 131072, 5)

[node name="Player" parent="." instance=ExtResource("2_ru3yv")]
position = Vector2(-107, 2)

[node name="DungeonSelectorManager" parent="." instance=ExtResource("4_rnqfy")]
position = Vector2(24, 7)

[node name="HubElements" type="Node2D" parent="."]
y_sort_enabled = true

[node name="ForestSprits" type="Node2D" parent="HubElements"]
y_sort_enabled = true
position = Vector2(-587, -13)

[node name="CatDialogNPC" parent="HubElements/ForestSprits" node_paths=PackedStringArray("_animated_sprite") instance=ExtResource("5_vi8no")]
_animated_sprite = NodePath("AnimatedSprite")
_dialog = SubResource("Resource_7sp3s")

[node name="AnimatedSprite" parent="HubElements/ForestSprits/CatDialogNPC" instance=ExtResource("6_0ahk7")]

[node name="FrogDialogNPC" parent="HubElements/ForestSprits" node_paths=PackedStringArray("_animated_sprite") instance=ExtResource("5_vi8no")]
position = Vector2(0, 37)
_animated_sprite = NodePath("AnimatedSprite")
_dialog = SubResource("Resource_lth6j")

[node name="AnimatedSprite" parent="HubElements/ForestSprits/FrogDialogNPC" instance=ExtResource("7_vvvq4")]

[node name="DogDialogNPC" parent="HubElements/ForestSprits" node_paths=PackedStringArray("_animated_sprite") instance=ExtResource("5_vi8no")]
position = Vector2(1, 76)
_animated_sprite = NodePath("AnimatedSprite")
_dialog = SubResource("Resource_nckq3")

[node name="AnimatedSprite" parent="HubElements/ForestSprits/DogDialogNPC" instance=ExtResource("8_h0mhr")]

[node name="PenguinDialogNPC" parent="HubElements/ForestSprits" node_paths=PackedStringArray("_animated_sprite") instance=ExtResource("5_vi8no")]
position = Vector2(-1, 119)
_animated_sprite = NodePath("AnimatedSprite")
_dialog = SubResource("Resource_j6gxk")

[node name="AnimatedSprite" parent="HubElements/ForestSprits/PenguinDialogNPC" instance=ExtResource("9_x04u3")]

[node name="ForestSpiritHubPositions" type="Node2D" parent="HubElements"]
visible = false
y_sort_enabled = true

[node name="CatPosition" parent="HubElements/ForestSpiritHubPositions" instance=ExtResource("7_1efiv")]
position = Vector2(-173, -19)

[node name="FrogPosition" parent="HubElements/ForestSpiritHubPositions" instance=ExtResource("7_1efiv")]
position = Vector2(-172, 43)

[node name="DogPosition" parent="HubElements/ForestSpiritHubPositions" instance=ExtResource("7_1efiv")]
position = Vector2(-48, -20)

[node name="PenguinPosition" parent="HubElements/ForestSpiritHubPositions" instance=ExtResource("7_1efiv")]
position = Vector2(-51, 48)

[node name="EmmyDefaultPosition" parent="HubElements" instance=ExtResource("7_1efiv")]
visible = false
position = Vector2(-96, -43)

[node name="EmmyLorePosition" parent="HubElements" instance=ExtResource("7_1efiv")]
visible = false
position = Vector2(-28, 7)

[node name="EmmyDialogNPC" parent="HubElements" node_paths=PackedStringArray("_animated_sprite") instance=ExtResource("5_vi8no")]
position = Vector2(-96, -43)
_animated_sprite = NodePath("EmmyNPCSprite")
_dialog = SubResource("Resource_wflvf")

[node name="EmmyNPCSprite" parent="HubElements/EmmyDialogNPC" instance=ExtResource("11_vo8kq")]
flip_h = true
